syntax = "proto3";
package userPKG;

service UserService {
    rpc Create (User) returns (Response) {
    }
    rpc Get (User) returns (Response) {
    }
    rpc GetAll (Request) returns (Response) {
    }
    rpc Auth (User) returns (Token) {
    }
    rpc ValidateToken (Token) returns (Token) {
    }
}

message User {
    string id = 1;
    string name = 2;
    string company = 3;
    string email = 4;
    string password = 5;
}

message Response {
    User user = 1;
    repeated User users = 2;
    repeated Error error = 3;
    bool Created = 4;
}

message Token {
    string token = 1;
    bool valid = 2;
    Error errors = 3;
}

message Error {
    int32 code = 1;
    string description = 2;
}

message Request {
}
